--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,21 @@ gst_v1_28 = ["gstreamer/v1_28"]
 [dependencies]
 dsl = { path = "crates/dsl" }
 gstreamer = "0.24.1"
+gstreamer-app = "0.24.0"
+gstreamer-video = "0.24.1"
+log = "0.4.27"
+once_cell = "1.21.3"
+serde = { version = "1.0.219", features = ["derive"] }
+thiserror = "2.0.16"
+tokio = { version = "1.47.1", features = ["full"] }
+toml = "0.9.5"
+
+[[bin]]
+name = "ds-app"
+path = "src/main.rs"
+
+[lib]
+path = "src/lib.rs"
+
+[dev-dependencies]
+tempfile = "3.8"
