--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,51 +1,9 @@
 [workspace]
 members = [
     "crates/dsl",
-    ".",
+    "crates/ds-rs",
 ]
 resolver = "2"
 version = "0.1.0"
 edition = "2024"
 
-[package]
-name = "ds-rs"
-version = "0.1.0" # TODO: use the workspace version
-edition = "2024" # TODO: use the workspace edition
-description = "Powerful library to control nVidia DeepStream AI processing framework"
-
-[features]
-default = ["std"]
-std = []
-logging = ["gstreamer/log"]
-serde = ["gstreamer/serde"]
-gst_v1_16 = ["gstreamer/v1_16"]
-gst_v1_18 = ["gstreamer/v1_18"]
-gst_v1_20 = ["gstreamer/v1_20"]
-gst_v1_22 = ["gstreamer/v1_22"]
-gst_v1_24 = ["gstreamer/v1_24"]
-gst_v1_26 = ["gstreamer/v1_26"]
-gst_v1_28 = ["gstreamer/v1_28"]
-
-
-[dependencies]
-dsl = { path = "crates/dsl" }
-gstreamer = "0.24.1"
-gstreamer-app = "0.24.0"
-gstreamer-video = "0.24.1"
-log = "0.4.27"
-once_cell = "1.21.3"
-rand = "0.9.2"
-serde = { version = "1.0.219", features = ["derive"] }
-thiserror = "2.0.16"
-tokio = { version = "1.47.1", features = ["full"] }
-toml = "0.9.5"
-
-[[bin]]
-name = "ds-app"
-path = "src/main.rs"
-
-[lib]
-path = "src/lib.rs"
-
-[dev-dependencies]
-tempfile = "3.8"
