--- a/crates/ds-rs/Cargo.toml
+++ b/crates/ds-rs/Cargo.toml
@@ -26,7 +26,7 @@ gstreamer-app = "0.24.0"
 gstreamer-video = "0.24.1"
 log = "0.4.27"
 once_cell = "1.21.3"
-rand = "0.8" # keep this 0.8
+rand.workspace = true
 serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.16"
 tokio = { version = "1.47.1", features = ["full"] }
