--- a/crates/ds-rs/Cargo.toml
+++ b/crates/ds-rs/Cargo.toml
@@ -21,9 +21,9 @@ gst_v1_28 = ["gstreamer/v1_28"]
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 ctrlc = "3.4"
-gstreamer = "0.24.1"
-gstreamer-app = "0.24.0"
-gstreamer-video = "0.24.1"
+gstreamer.workspace = true
+gstreamer-app.workspace = true
+gstreamer-video.workspace = true
 log = "0.4.27"
 once_cell = "1.21.3"
 rand.workspace = true
