--- a/crates/source-videos/Cargo.toml
+++ b/crates/source-videos/Cargo.toml
@@ -2,6 +2,22 @@
 name = "source-videos"
 version = "0.1.0"
 edition = "2024"
-description = "Provides source videos for testing ds-rs"
+description = "Dynamic video source generation infrastructure for testing ds-rs"
 
 [dependencies]
+clap = { version = "4.5.45", features = ["derive"] }
+env_logger = "0.11.8"
+gstreamer.workspace = true
+gstreamer-app.workspace = true
+gstreamer-rtsp = "0.24.0"
+gstreamer-rtsp-server = "0.24.1"
+log = "0.4.27"
+once_cell = "1.21.3"
+serde = { version = "1.0.219", features = ["derive"] }
+thiserror = "2.0.16"
+tokio = { version = "1.47.1", features = ["full"] }
+toml = "0.9.5"
+uuid = { version = "1.18.0", features = ["v4"] }
+
+[dev-dependencies]
+tempfile = "3.8"
