Refactor error handling in pad linking and improve test assertions for video source generation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ members = [
     "crates/source-videos",
 ]
 resolver = "3"
+
+[workspace.package]
 version = "0.1.0"
 edition = "2024"
 description = "Powerful library to control nVidia DeepStream AI processing framework"
