--- a/crates/source-videos/Cargo.toml
+++ b/crates/source-videos/Cargo.toml
@@ -12,6 +12,7 @@ gstreamer-app.workspace = true
 gstreamer-rtsp = "0.24.0"
 gstreamer-rtsp-server = "0.24.1"
 log = "0.4.27"
+notify = "8.2.0"
 once_cell = "1.21.3"
 serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.16"
