Implement configuration watcher and broadcaster
- Added `ConfigWatcher` to monitor configuration file changes and emit events for modifications, creations, and deletions.
- Introduced `ConfigBroadcaster` for broadcasting configuration events to subscribers.
- Enhanced `VideoSourceManager` with methods to update and batch update source configurations.
- Created `ChangeApplicator` to apply configuration changes and handle rollbacks.
- Developed `ConfigDiffer` to detect changes between old and new configurations.
- Implemented `RuntimeManager` to manage application state and configuration history.
- Added event bus for emitting and subscribing to configuration events.
- Included tests for new functionality, ensuring correctness of configuration changes and event handling.

--- a/crates/source-videos/Cargo.toml
+++ b/crates/source-videos/Cargo.toml
@@ -12,7 +12,7 @@ gstreamer-app.workspace = true
 gstreamer-rtsp = "0.24.0"
 gstreamer-rtsp-server = "0.24.1"
 log = "0.4.27"
-notify = "8.2.0"
+notify = { version = "8.2.0", default-features = false, features = ["mio", "fsevent-sys", "crossbeam-channel", "flume"] }
 once_cell = "1.21.3"
 serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.16"
