--- a/crates/source-videos/Cargo.toml
+++ b/crates/source-videos/Cargo.toml
@@ -15,6 +15,7 @@ log = "0.4.27"
 notify = { version = "8.2.0", default-features = false, features = ["mio", "fsevent-sys", "crossbeam-channel", "flume"] }
 once_cell = "1.21.3"
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0"
 thiserror = "2.0.16"
 tokio = { version = "1.47.1", features = ["full"] }
 toml = "0.9.5"
