Implement CPU Vision Backend with ONNX Detection and Centroid Tracking
- Added `detector.rs` for ONNX-based object detection, including mock detection and NMS implementation.
- Introduced `elements.rs` to create GStreamer elements for CPU detection, tracking, and OSD.
- Created `tracker.rs` for a centroid tracking algorithm to manage detected objects.
- Developed `mod.rs` to organize CPU vision modules and manage the backend state.
- Updated `standard.rs` to integrate CPU vision capabilities, replacing mock elements with actual CPU-based implementations.
- Enhanced error handling in `error.rs` for initialization and processing failures.
- Added comprehensive tests in `cpu_backend_tests.rs` to validate CPU vision functionality, including detection, tracking, and pipeline creation.

--- a/crates/ds-rs/Cargo.toml
+++ b/crates/ds-rs/Cargo.toml
@@ -32,6 +32,13 @@ thiserror = "2.0.16"
 tokio = { version = "1.47.1", features = ["full"] }
 toml = "0.9.5"
 
+# CPU Vision Backend dependencies (placeholders for future implementation)
+# ort = { version = "1.16.3", features = ["load-dynamic"] }  # TODO: Add when implementing ONNX
+image = "0.25"
+# imageproc = "0.25"  # TODO: Add when implementing image processing
+nalgebra = "0.34.0"
+# ndarray = "0.16"  # TODO: Add when implementing tensor operations
+
 [[bin]]
 name = "ds-app"
 path = "src/main.rs"
