--- a/crates/ds-rs/Cargo.toml
+++ b/crates/ds-rs/Cargo.toml
@@ -16,6 +16,11 @@ gst_v1_22 = ["gstreamer/v1_22"]
 gst_v1_24 = ["gstreamer/v1_24"]
 gst_v1_26 = ["gstreamer/v1_26"]
 gst_v1_28 = ["gstreamer/v1_28"]
+opencv = ["dep:opencv"]
+nalgebra = ["dep:nalgebra"]
+ndarray = ["dep:ndarray"]
+ort = ["dep:ort"]
+imgproc = ["dep:imgproc"]
 
 
 [dependencies]
@@ -24,20 +29,19 @@ ctrlc = "3.4"
 gstreamer.workspace = true
 gstreamer-app.workspace = true
 gstreamer-video.workspace = true
+image = "0.25"
+imgproc = { version = "0.3.12", optional = true }
 log = "0.4.27"
+nalgebra = { version = "0.34.0", optional = true }
+ndarray = { version = "0.16.1", optional = true }
 once_cell = "1.21.3"
+opencv = { version = "0.95.1", optional = true }
+ort = { version = "1.16.3", optional = true }
 rand.workspace = true
 serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.16"
 tokio = { version = "1.47.1", features = ["full"] }
 toml = "0.9.5"
-
-# CPU Vision Backend dependencies (placeholders for future implementation)
-# ort = { version = "1.16.3", features = ["load-dynamic"] }  # TODO: Add when implementing ONNX
-image = "0.25"
-# imageproc = "0.25"  # TODO: Add when implementing image processing
-nalgebra = "0.34.0"
-# ndarray = "0.16"  # TODO: Add when implementing tensor operations
 
 [[bin]]
 name = "ds-app"
