--- a/crates/ds-rs/Cargo.toml
+++ b/crates/ds-rs/Cargo.toml
@@ -52,3 +52,9 @@ path = "src/lib.rs"
 
 [dev-dependencies]
 tempfile = "3.8"
+
+[target.'cfg(unix)'.dev-dependencies]
+nix = { version = "0.29", features = ["signal", "process"] }
+
+[target.'cfg(windows)'.dev-dependencies]
+winapi = { version = "0.3", features = ["wincon", "processthreadsapi", "handleapi", "winnt"] }
