--- a/crates/ds-rs/Cargo.toml
+++ b/crates/ds-rs/Cargo.toml
@@ -40,7 +40,7 @@ ort = { version = "1.16.3", optional = true }
 rand.workspace = true
 serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.16"
-tokio = { version = "1.47.1", features = ["full"] }
+tokio = { version = "1.47.1", features = ["full"] } # TODO: we should not use tokio (async is ok though)
 toml = "0.9.5"
 
 [[bin]]
