--- a/crates/source-videos/Cargo.toml
+++ b/crates/source-videos/Cargo.toml
@@ -17,7 +17,7 @@ once_cell = "1.21.3"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0.16"
-tokio = { version = "1.47.1", features = ["full"] }
+tokio = { version = "1.47.1", features = ["full"] } # TODO: we should not use tokio (async is ok though)
 toml = "0.9.5"
 uuid = { version = "1.18.0", features = ["v4"] }
 
