--- a/crates/ds-rs/Cargo.toml
+++ b/crates/ds-rs/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2024" # TODO: use the workspace edition
 description = "Powerful library to control nVidia DeepStream AI processing framework"
 
 [features]
-default = ["std"]
+default = ["std", "onnx", "cpu_vision"]
 std = []
+onnx = ["ort", "ndarray"]
+cpu_vision = ["nalgebra", "onnx"]
 logging = ["gstreamer/log"]
 serde = ["gstreamer/serde"]
 gst_v1_16 = ["gstreamer/v1_16"]
@@ -52,6 +54,7 @@ path = "src/lib.rs"
 
 [dev-dependencies]
 tempfile = "3.8"
+env_logger = "0.11"
 
 [target.'cfg(unix)'.dev-dependencies]
 nix = { version = "0.29", features = ["signal", "process"] }
