--- a/crates/ds-rs/Cargo.toml
+++ b/crates/ds-rs/Cargo.toml
@@ -7,8 +7,9 @@ description = "Powerful library to control nVidia DeepStream AI processing frame
 [features]
 default = ["std", "onnx", "cpu_vision"]
 std = []
-onnx = ["ort", "ndarray"]
+onnx = ["ort", "ndarray", "half"]
 cpu_vision = ["nalgebra", "onnx"]
+half = ["dep:half", "ort?/half"]
 logging = ["gstreamer/log"]
 serde = ["gstreamer/serde"]
 gst_v1_16 = ["gstreamer/v1_16"]
@@ -38,7 +39,8 @@ nalgebra = { version = "0.34.0", optional = true }
 ndarray = { version = "0.15.6", optional = true }
 once_cell = "1.21.3"
 opencv = { version = "0.95.1", optional = true }
-ort = { version = "1.16.3", optional = true }
+ort = { version = "1.16.3", optional = true, features = ["half"] }
+half = { version = "2.3", optional = true }
 rand.workspace = true
 serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.16"
