Add CPU-based object detector using ONNX models
- Introduced a new `CpuDetector` element in the `cpuinfer` crate, implementing GStreamer base transform functionality.
- Added support for loading ONNX models and performing object detection on video frames.
- Implemented properties for configuring model path, confidence threshold, NMS threshold, input dimensions, and frame processing interval.
- Registered the `CpuDetector` element in the `ds-rs` crate, allowing it to be used in GStreamer pipelines.
- Updated the standard backend to create and configure the `CpuDetector` with the specified ONNX model.
- Enhanced logging for better traceability of model loading and detection processes.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
     "crates/dsl",
     "crates/ds-rs",
     "crates/source-videos",
+    "crates/cpuinfer",
 ]
 resolver = "3" # DO NOT CHANGE
 
@@ -14,5 +15,6 @@ description = "Powerful library to control nVidia DeepStream AI processing frame
 [workspace.dependencies]
 gstreamer = "0.24.1"
 gstreamer-app = "0.24.0"
+gstreamer-base = "0.24.0"
 gstreamer-video = "0.24.1"
 rand = "0.8" # keep this 0.8
