--- a/crates/ds-rs/Cargo.toml
+++ b/crates/ds-rs/Cargo.toml
@@ -31,6 +31,7 @@ clap = { version = "4.5", features = ["derive"] }
 ctrlc = "3.4"
 gstreamer.workspace = true
 gstreamer-app.workspace = true
+gstreamer-base.workspace = true
 gstreamer-video.workspace = true
 image = "0.25"
 imgproc = { version = "0.3.12", optional = true }
