--- a/crates/cpuinfer/Cargo.toml
+++ b/crates/cpuinfer/Cargo.toml
@@ -12,6 +12,7 @@ opencv-dnn = ["dep:opencv"]
 static = []
 capi = []
 half = ["dep:half"]
+darknet = ["dep:darknet"]
 
 [lib]
 name = "gstcpuinfer"
@@ -19,23 +20,19 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [dependencies]
+darknet = { version = "0.4.0", optional = true }
 gstreamer.workspace = true
 gstreamer-base.workspace = true
 gstreamer-video.workspace = true
-once_cell = "1.21.3"
+half = { version = "2.6.0", optional = true }
 image = "0.25.6"
+ndarray = { version = "0.15.6", optional = true } # Version required for ONNX support
+once_cell = "1.21.3"
+opencv = { version = "0.95", default-features = false, features = ["dnn", "imgproc"], optional = true }
+ort = { version = "1.16.3", features = ["half"], optional = true }
+# tflite = { version = "0.9", optional = true } # TensorFlow Lite support (lightweight alternative)
 thiserror = "2.0.16"
 
-# Optional ONNX Runtime support
-ort = { version = "1.16.3", features = ["half"], optional = true }
-half = { version = "2.6.0", optional = true }
-ndarray = { version = "0.15.6", optional = true } # Version required for ONNX support
-
-# Optional OpenCV DNN support (alternative to ONNX)
-opencv = { version = "0.95", default-features = false, features = ["dnn", "imgproc"], optional = true }
-
-# Optional TensorFlow Lite support (lightweight alternative)
-# tflite = { version = "0.9", optional = true }
 
 [build-dependencies]
 gst-plugin-version-helper = "0.8.3"
