--- a/crates/ds-rs/Cargo.toml
+++ b/crates/ds-rs/Cargo.toml
@@ -37,7 +37,7 @@ image = "0.25"
 imgproc = { version = "0.3.12", optional = true }
 log = "0.4.27"
 nalgebra = { version = "0.34.0", optional = true }
-ndarray = { version = "0.15.6", optional = true }
+ndarray = { version = "0.15.6", optional = true } # version required by ort
 once_cell = "1.21.3"
 opencv = { version = "0.95.1", optional = true }
 ort = { version = "1.16.3", optional = true, features = ["half"] }
@@ -60,7 +60,7 @@ tempfile = "3.8"
 env_logger = "0.11"
 
 [target.'cfg(unix)'.dev-dependencies]
-nix = { version = "0.29", features = ["signal", "process"] }
+nix = { version = "0.30.1", features = ["signal", "process"] }
 
 [target.'cfg(windows)'.dev-dependencies]
 winapi = { version = "0.3", features = ["wincon", "processthreadsapi", "handleapi", "winnt"] }
