Add gst_cpuinfer as an empty dependency in Cargo.toml

--- a/crates/ds-rs/Cargo.toml
+++ b/crates/ds-rs/Cargo.toml
@@ -24,6 +24,7 @@ nalgebra = ["dep:nalgebra"]
 ndarray = ["dep:ndarray"]
 ort = ["dep:ort"]
 imgproc = ["dep:imgproc"]
+gst_cpuinfer = []
 
 
 [dependencies]
