--- a/crates/ds-rs/Cargo.toml
+++ b/crates/ds-rs/Cargo.toml
@@ -12,37 +12,40 @@ cpu_vision = ["nalgebra", "onnx"]
 half = ["dep:half", "ort?/half"]
 logging = ["gstreamer/log"]
 serde = ["gstreamer/serde"]
-gst_v1_16 = ["gstreamer/v1_16"]
-gst_v1_18 = ["gstreamer/v1_18"]
-gst_v1_20 = ["gstreamer/v1_20"]
-gst_v1_22 = ["gstreamer/v1_22"]
-gst_v1_24 = ["gstreamer/v1_24"]
+# gst_v1_16 = ["gstreamer/v1_16"]
+# gst_v1_18 = ["gstreamer/v1_18"]
+# gst_v1_20 = ["gstreamer/v1_20"]
+# gst_v1_22 = ["gstreamer/v1_22"]
+# gst_v1_24 = ["gstreamer/v1_24"]
 gst_v1_26 = ["gstreamer/v1_26"]
-gst_v1_28 = ["gstreamer/v1_28"]
-opencv = ["dep:opencv"]
+# gst_v1_28 = ["gstreamer/v1_28"]
+# opencv = ["dep:opencv"]
 nalgebra = ["dep:nalgebra"]
 ndarray = ["dep:ndarray"]
 ort = ["dep:ort"]
 imgproc = ["dep:imgproc"]
 gst_cpuinfer = []
+cairo-rs = ["dep:cairo-rs"]
 
 
 [dependencies]
+cairo-rs = { version = "0.21.1", optional = true }
 clap = { version = "4.5", features = ["derive"] }
 ctrlc = "3.4"
 gstreamer.workspace = true
 gstreamer-app.workspace = true
 gstreamer-base.workspace = true
 gstreamer-video.workspace = true
+half = { version = "2.3", optional = true }
 image = "0.25"
 imgproc = { version = "0.3.12", optional = true }
 log = "0.4.27"
 nalgebra = { version = "0.34.0", optional = true }
 ndarray = { version = "0.15.6", optional = true } # version required by ort
 once_cell = "1.21.3"
-opencv = { version = "0.95.1", optional = true }
+# opencv = { version = "0.95.1", optional = true }
 ort = { version = "1.16.3", optional = true, features = ["half"] }
-half = { version = "2.3", optional = true }
+parking_lot = "0.12"
 rand.workspace = true
 serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.16"
