--- a/crates/source-videos/Cargo.toml
+++ b/crates/source-videos/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "source-videos"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 description = "Dynamic video source generation infrastructure for testing ds-rs"
 
 [dependencies]
