--- a/crates/ds-rs/Cargo.toml
+++ b/crates/ds-rs/Cargo.toml
@@ -39,6 +39,7 @@ gstreamer-video.workspace = true
 half = { version = "2.3", optional = true }
 image = "0.25"
 imgproc = { version = "0.3.12", optional = true }
+lazy_static = "1.4"
 log = "0.4.27"
 nalgebra = { version = "0.34.0", optional = true }
 ndarray = { version = "0.15.6", optional = true } # version required by ort
