--- a/crates/source-videos/Cargo.toml
+++ b/crates/source-videos/Cargo.toml
@@ -20,6 +20,8 @@ thiserror = "2.0.16"
 tokio = { version = "1.47.1", features = ["full"] } # TODO: we should not use tokio (async is ok though)
 toml = "0.9.5"
 uuid = { version = "1.18.0", features = ["v4"] }
+rand = "0.8"
+anyhow = "1.0"
 
 [dev-dependencies]
 tempfile = "3.8"
