--- a/crates/source-videos/Cargo.toml
+++ b/crates/source-videos/Cargo.toml
@@ -22,6 +22,8 @@ toml = "0.9.5"
 uuid = { version = "1.18.0", features = ["v4"] }
 rand = "0.8"
 anyhow = "1.0"
+walkdir = "2.5"
+mime_guess = "2.0"
 
 [dev-dependencies]
 tempfile = "3.8"
