--- a/crates/source-videos/Cargo.toml
+++ b/crates/source-videos/Cargo.toml
@@ -7,6 +7,7 @@ description = "Dynamic video source generation infrastructure for testing ds-rs"
 [dependencies]
 anyhow = "1.0"
 axum = "0.8.4"
+chrono = { version = "0.4.41", features = ["serde"] }
 clap = { version = "4.5.45", features = ["derive"] }
 env_logger = "0.11.8"
 gstreamer.workspace = true
