--- a/crates/source-videos/Cargo.toml
+++ b/crates/source-videos/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = "1.0"
 thiserror = "2.0.16"
 tokio = { version = "1.47.1", features = ["full"] } # TODO: we should not use tokio (async is ok though)
 toml = "0.9.5"
+tower-http = { version = "0.6.2", features = ["cors", "trace"] }
 uuid = { version = "1.18.0", features = ["v4"] }
 walkdir = "2.5"
 
