--- a/crates/source-videos/Cargo.toml
+++ b/crates/source-videos/Cargo.toml
@@ -10,6 +10,10 @@ axum = "0.8.4"
 chrono = { version = "0.4.41", features = ["serde"] }
 clap = { version = "4.5.45", features = ["derive"] }
 clap_complete = "4.5.45"
+async-trait = "0.1.83"
+dirs = "5.0.1"
+colored = "2.2.0"
+comfy-table = "7.1.3"
 env_logger = "0.11.8"
 glob = "0.3"
 gstreamer.workspace = true
@@ -22,6 +26,7 @@ notify = { version = "8.2.0", default-features = false, features = ["mio", "fsev
 once_cell = "1.21.3"
 rand = "0.8"
 regex = "1.10"
+rustyline = "15.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0.16"
