--- a/crates/source-videos/Cargo.toml
+++ b/crates/source-videos/Cargo.toml
@@ -35,6 +35,7 @@ toml = "0.9.5"
 tower-http = { version = "0.6.2", features = ["cors", "trace"] }
 uuid = { version = "1.18.0", features = ["v4"] }
 walkdir = "2.5"
+cpuinfer = { version = "0.1.0", path = "../cpuinfer" }
 
 [dev-dependencies]
 axum-test = "18.0.0"
