--- a/crates/ds-rs/Cargo.toml
+++ b/crates/ds-rs/Cargo.toml
@@ -50,6 +50,7 @@ ort = { version = "1.16.3", optional = true, features = ["half"] }
 parking_lot = "0.12"
 rand.workspace = true
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0"
 sysinfo = "0.31"
 thiserror = "2.0.16"
 tokio = { version = "1.47.1", features = ["full"] } # TODO: we should not use tokio (async is ok though)
