--- a/crates/cpuinfer/Cargo.toml
+++ b/crates/cpuinfer/Cargo.toml
@@ -12,6 +12,7 @@ ort = ["dep:ort", "half", "dep:ndarray"]
 static = []
 capi = []
 half = ["dep:half"]
+log = ["dep:log"]
 # darknet = ["dep:darknet"]
 
 [lib]
@@ -26,6 +27,7 @@ gstreamer-base.workspace = true
 gstreamer-video.workspace = true
 half = { version = "2.6.0", optional = true }
 image = "0.25.6"
+log = { version = "0.4.27", optional = true }
 ndarray = { version = "0.15.6", optional = true } # Version required for ONNX support
 once_cell = "1.21.3"
 # opencv = { version = "0.95", default-features = false, features = ["dnn", "imgproc"], optional = true }
