chore: remove unnecessary dependencies from half and ort features

--- a/crates/ds-rs/Cargo.toml
+++ b/crates/ds-rs/Cargo.toml
@@ -9,7 +9,7 @@ default = ["std", "onnx", "cpu_vision", "cairo-rs", "logging"]
 std = []
 onnx = ["ort", "ndarray", "half"]
 cpu_vision = ["nalgebra", "onnx"]
-half = ["dep:half", "ort?/half", "cpuinfer/half"]
+half = ["dep:half", "cpuinfer/half"]
 logging = ["gstreamer/log", "cpuinfer/log"]
 serde = ["gstreamer/serde"]
 # gst_v1_16 = ["gstreamer/v1_16"]
@@ -22,7 +22,7 @@ serde = ["gstreamer/serde"]
 # opencv = ["dep:opencv"]
 nalgebra = ["dep:nalgebra"]
 ndarray = ["dep:ndarray"]
-ort = ["dep:ort", "cpuinfer/ort"]
+ort = ["cpuinfer/ort"]
 imgproc = ["dep:imgproc"]
 gst_cpuinfer = []
 cairo-rs = ["dep:cairo-rs"]
