--- a/crates/ds-rs/Cargo.toml
+++ b/crates/ds-rs/Cargo.toml
@@ -5,12 +5,11 @@ edition.workspace = true
 description.workspace = true
 
 [features]
-default = ["std", "onnx", "cpu_vision", "cairo-rs", "logging"]
+default = ["std", "cpu_vision", "cairo-rs", "logging"]
 std = []
-onnx = ["ort", "ndarray", "half"]
-cpu_vision = ["nalgebra", "onnx"]
-half = ["dep:half", "cpuinfer/half"]
-logging = ["gstreamer/log", "cpuinfer/log"]
+cpu_vision = ["nalgebra"]
+half = ["dep:half"]
+logging = ["gstreamer/log"]
 serde = ["gstreamer/serde"]
 # gst_v1_16 = ["gstreamer/v1_16"]
 # gst_v1_18 = ["gstreamer/v1_18"]
@@ -21,17 +20,14 @@ serde = ["gstreamer/serde"]
 # gst_v1_28 = ["gstreamer/v1_28"]
 # opencv = ["dep:opencv"]
 nalgebra = ["dep:nalgebra"]
-ndarray = ["dep:ndarray"]
-ort = ["cpuinfer/ort"]
 imgproc = ["dep:imgproc"]
-gst_cpuinfer = []
 cairo-rs = ["dep:cairo-rs"]
 
 
 [dependencies]
 cairo-rs = { version = "0.21.1", optional = true }
 clap = { version = "4.5.46", features = ["derive"] }
-cpuinfer = { path = "../cpuinfer", features = ["ort"] }
+# cpuinfer is now a separate GStreamer plugin, not a library dependency
 ctrlc = "3.4.7"
 gstreamer.workspace = true
 gstreamer-app.workspace = true
@@ -43,7 +39,6 @@ imgproc = { version = "0.3.12", optional = true }
 lazy_static = "1.5.0"
 log = "0.4.27"
 nalgebra = { version = "0.34.0", optional = true }
-ndarray = { version = "0.16.1", optional = true } # version required by ort
 once_cell = "1.21.3"
 # opencv = { version = "0.95.1", optional = true }
 parking_lot = "0.12.4"
