--- a/crates/source-videos/Cargo.toml
+++ b/crates/source-videos/Cargo.toml
@@ -24,7 +24,7 @@ log = "0.4.27"
 mime_guess = "2.0.5"
 notify = { version = "8.2.0", default-features = false, features = ["mio", "fsevent-sys", "crossbeam-channel", "flume"] }
 once_cell = "1.21.3"
-rand = "0.9.2"
+rand = { workspace = true }
 regex = "1.11.2"
 rustyline = "17.0.1"
 serde = { version = "1.0.219", features = ["derive"] }
